[package]
name = "kus"
version = "0.1.0"
authors = ["Kushal <kushaldeveloper@gmail.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "a first package to upload to crates"

# These URLs point to more information about the repository.
documentation = "https://github.com/rustlibrary/kus/blob/master/README.md"
homepage = "https://rustlibrary.github.io/kus/"
repository = "https://github.com/rustlibrary/kus"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["kus", "library"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
license = "AGPL-1.0"

# If a project is using a nonstandard license, then this key may be specified in
# lieu of the above key and must point to a file relative to this manifest
# (similar to the readme key).
# license-file = "..."


[dependencies]
